--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -2,3 +2,7 @@ db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8
 db.username=root
 db.password=admin
+db.initialSize=3
+db.minIdle=3
+db.maxIdle=5
+db.maxTotal=15
