--- a/pom.xml
+++ b/pom.xml
@@ -247,13 +247,21 @@
 			<artifactId>javamelody-core</artifactId>
 			<version>1.73.1</version>
 		</dependency>
-		
+
 		<!-- spring-test -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+
+		<!-- kaptcha -->
+		<dependency>
+			<groupId>com.github.penggle</groupId>
+			<artifactId>kaptcha</artifactId>
+			<version>2.3.2</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>spring_redis</finalName>
