--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,9 @@
 	<name>spring_redis Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
-		<spring.version>3.2.18.RELEASE</spring.version>
+		<spring.version>4.3.18.RELEASE</spring.version>
 		<freemarker.version>2.3.23</freemarker.version>
+		<swagger.version>2.7.0</swagger.version>
 	</properties>
 	<dependencies>
 		<!-- junit -->
@@ -262,6 +263,18 @@
 			<version>2.3.2</version>
 		</dependency>
 
+		<!-- swagger -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${swagger.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${swagger.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>spring_redis</finalName>
