--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<spring.version>4.3.18.RELEASE</spring.version>
 		<freemarker.version>2.3.23</freemarker.version>
 		<swagger.version>2.7.0</swagger.version>
+		<jackson.version>2.9.0</jackson.version>
 	</properties>
 	<dependencies>
 		<!-- junit -->
@@ -41,12 +42,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
-			<!-- <exclusions> -->
-			<!-- <exclusion> -->
-			<!-- <groupId>commons-logging</groupId> -->
-			<!-- <artifactId>commons-logging</artifactId> -->
-			<!-- </exclusion> -->
-			<!-- </exclusions> -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -188,17 +183,17 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.0</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.9.0</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.9.0</version>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<!-- joda-time -->
